[#201] Fix expand include visitor